--- a/monit.conf
+++ b/monit.conf
@@ -32,7 +32,7 @@ set daemon  60              # check services at 1-minute intervals
 ## Monit instance. The id is generated and stored on first Monit start. By 
 ## default the file is placed in $HOME/.monit.id.
 #
-set idfile /var/monit/id
+set idfile /run/monit.pid
 #
 ## Set the location of the Monit state file which saves monitoring states
 ## on each cycle. By default the file is placed in $HOME/.monit.state. If
@@ -40,7 +40,7 @@ set idfile /var/monit/id
 ## the monitoring state across reboots. If it is on temporary filesystem, the
 ## state will be lost on reboot which may be convenient in some situations.
 #
-set statefile /var/monit/state
+# set statefile /var/monit/state
 #
 ## Set the list of mail servers for alert delivery. Multiple servers may be 
 ## specified using a comma separator. If the first mail server fails, Monit 
